@@ -4103,15 +4103,11 @@ dnl
 dnl OS X notification plugin
 dnl
 AC_ARG_ENABLE(osx_notifications,
-  [  --enable-osx-notifications          osx notification plugin (default disabled)],,
+  [AS_HELP_STRING([--enable-osx-notifications],
+    [macOS notification plugin (default disabled)])],,
   [enable_osx_notifications=no])
 AS_IF([test "${enable_osx_notifications}" != "no"], [
-  if test -d ${CONTRIB_DIR}/Growl.framework -o -d ${CONTRIB_DIR}/Frameworks/Growl.framework
-  then
-      VLC_ADD_PLUGIN([osx_notifications])
-      VLC_ADD_LIBS([osx_notifications], [-Wl,-framework,Growl,-framework,Foundation])
-      VLC_ADD_OBJCFLAGS([osx_notifications], [-fobjc-exceptions] )
-  fi
+  VLC_ADD_PLUGIN([osx_notifications])
 ])
 
 dnl
